--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.datasource.driver=com.mysql.cj.jdbc.Driver
 # HIBERNATE PROPERTIES
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=update
-hibernate.show_sql=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show_sql=true
+
 
 
