--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.3.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.in28minutes.springboot.web.application</groupId>
-	<artifactId>spring-boot-web-application-bootstrap-jquery</artifactId>
+	<groupId>com.bookfinder</groupId>
+	<artifactId>spring-boot-web-application</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-web-application-bootstrap-jquery</name>
+	<name>spring-boot-web-application</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -59,6 +59,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+	    	<groupId>javax.servlet</groupId>
+	    	<artifactId>jstl</artifactId>
+	    	</dependency>
 	</dependencies>
 
 	<build>
